--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         hallo 
-        <img src="cool plaatje.jpg"
+        <img src="cool plaatje.jpg">
     </body>
 </html>
