--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         hallo 
-        <img src="wolfvollemaan.jpg">
+        <img src="wolfvollemaan.jpg" alt="ik als ik boos ben je wil dan geen ruzie hebben met mij">
     </body>
 </html>
