--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         hallo 
         <img src="wolfvollemaan.jpg" alt="ik als ik boos ben je wil dan geen ruzie hebben met mij">
+        <a href="pagina2.html">klik hier voor pagina 2</a>
     </body>
 </html>
