--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="opmaak.css">
     </head>
     <body>
         hallo 
-        <img src="wolfvollemaan.jpg" alt="ik als ik boos ben je wil dan geen ruzie hebben met mij">
+        <img src="bos.webp"
         <a href="pagina2.html">klik hier voor pagina 2</a>
     </body>
 </html>
