--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         hallo 
-        <img src="bos.webp"
+        <img src="bos.webp">
         <a href="pagina2.html">klik hier voor pagina 2</a>
     </body>
 </html>
