--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="opmaak.css">
     </head>
     <body>
+        <ul>
+            <li><a href="pagina2.html">over mij</a></li>
+          </ul>
         hallo 
         <img src="bos.webp">
         <a href="pagina2.html">klik hier voor pagina 2</a>
