--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <ul>
-            <li><a href="pagina2.html">over mij</a></li>
+            <li><a href="index.html">over mij</a></li>
+            <li><a href="pagina2.html"> pagina 2</a></li>
           </ul>
         hallo 
         <img src="bos.webp">
