--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
             <li><a href="pagina2.html"> pagina 2</a></li>
           </ul>
         hallo 
-        <img src="bos.webp">
-        <a href="pagina2.html">klik hier voor pagina 2</a>
+        <img src="bos.webp">df
     </body>
 </html>
