--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
             <li><a href="pagina2.html"> pagina 2</a></li>
           </ul>
         hallo 
-        <img src="bos.webp">df
+        <img src="bos.webp">
     </body>
 </html>
