--- a/pagina2.html
+++ b/pagina2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="opmaak.css">
         hallo mensjes
         <a href="index.html">klik hier voor pagina 1</a>
     </head>
