--- a/pagina2.html
+++ b/pagina2.html
@@ -2,7 +2,13 @@
 <html>
     <head>
         <link rel="stylesheet" href="opmaak.css">
+        <body>
+            <ul>
+                <li><a href="index.html">over mij</a></li>
+                <li><a href="pagina2.html"> pagina 2</a></li>
+              </ul>
         hallo mensjes
         <a href="index.html">klik hier voor pagina 1</a>
+        </body>
     </head>
 </html>
