--- a/pagina2.html
+++ b/pagina2.html
@@ -6,6 +6,8 @@
             <ul>
                 <li><a href="index.html">over mij</a></li>
                 <li><a href="pagina2.html"> pagina 2</a></li>
+                <li><a href="pagina3.html"> pagina 3</a></li>
+                <il><a href="pagina.html"> pagina 4</a></il>
               </ul>
         hallo mensjes
         </body>
