--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <li><a href="pagina3.html"> pagina 3</a></li>
             <il><a href="pagina.html"> pagina 4</a></il>
           </ul>
-        hallo 
+        <p>welkom op mijn pagina</p> 
         <img src="bos.webp" style="width:300px;height:150px;">
     </body>
 </html>
