--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="opmaak.css">
     </head>
     <body>
+        <title>
+            BOAZ
+        </title>
         <ul>
             <li><a href="index.html">over mij</a></li>
             <li><a href="pagina2.html"> pagina 2</a></li>
