--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
             <il><a href="pagina.html"> pagina 4</a></il>
           </ul>
         <p>welkom op mijn pagina</p> 
-        <img src="bos.webp" style="width:300px;height:150px;">
+        <img class="plaatje" src="bos.webp" style="width:300px;height:150px;">
     </body>
 </html>
