--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li><a href="index.html">over mij</a></li>
             <li><a href="pagina2.html"> pagina 2</a></li>
             <li><a href="pagina3.html"> pagina 3</a></li>
-            <il><a href="pagina.html"> pagina 4</a></il>
+            <li><a href="pagina.html"> pagina 4</a></il>
           </ul>
         <p>welkom op mijn pagina</p> 
         <img class="plaatje" src="bos.webp" style="width:450px;height:225px;">
