--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="pagina3.html"> pagina 3</a></li>
             <li><a href="pagina.html"> pagina 4</a></il>
           </ul>
-        <p>welkom op mijn pagina</p> 
+        <p class="titel">BOAZ</p> 
         <img class="plaatje" src="bos.webp" style="width:450px;height:225px;">
     </body>
 </html>
