--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <li><a href="pagina.html"> pagina 4</a></il>
           </ul>
         <p class="titel">BOAZ</p> 
+        <p class="tekst1">Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege on H4C.
+        </p>
         <img class="plaatje" src="bos.webp" style="width:450px;height:225px;">
     </body>
 </html>
