--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
         </title>
         <ul>
             <li><a href="index.html">over mij</a></li>
-            <li><a href="pagina2.html"> pagina 2</a></li>
-            <li><a href="pagina3.html"> pagina 3</a></li>
-            <li><a href="pagina.html"> pagina 4</a></il>
+            <li><a href="pagina2.html"> kleurmodellen</a></li>
+            <li><a href="pagina3.html"> binair stelsel</a></li>
+            <li><a href="pagina.html"> compressie</a></il>
+            <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
           </ul>
         <p class="titel">BOAZ</p> 
         <p class="tekst1">Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege on H4C.
+        </p>
+        <p class="hobby">
+            mijn hobby's zijn vooral gamen en tiktok kijken.Als ik game speel ik eigenlijk allen GTA met vrienden
         </p>
         <img class="plaatje" src="bos.webp" style="width:450px;height:225px;">
     </body>
