--- a/pagina3.html
+++ b/pagina3.html
@@ -5,10 +5,11 @@
     </head>
     <body>
 <ul>
-    <li><a href="index.html">over mij</a></li>
-    <li><a href="pagina2.html"> pagina 2</a></li>
-    <li><a href="pagina3.html"> pagina 3</a></li>
-    <li><a href="pagina.html"> pagina 4</a></il>
+  <li><a href="index.html">over mij</a></li>
+  <li><a href="pagina2.html"> kleurmodellen</a></li>
+  <li><a href="pagina3.html"> binair stelsel</a></li>
+  <li><a href="pagina.html"> compressie</a></il>
+  <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
 hallo
 </body>
