--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="tekst1">Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege on H4C.
         </p>
         <p class="hobby">
-            mijn hobby's zijn vooral gamen en tiktok kijken.Als ik game speel ik eigenlijk allen GTA met vrienden
+            mijn hobby's zijn vooral gamen en tiktok kijken.Als ik game speel ik eigenlijk allen GTA met vrienden.
         </p>
         <img class="plaatje" src="bos.webp" style="width:450px;height:225px;">
     </body>
