--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         </title>
         <ul>
             <li><a href="index.html">over mij</a></li>
+            <li><a href="algemene informatie.html">algemene informatie</a></li>
             <li><a href="pagina2.html"> kleurmodellen</a></li>
             <li><a href="pagina3.html"> binair stelsel</a></li>
             <li><a href="pagina.html"> compressie</a></il>
