--- a/pagina.html
+++ b/pagina.html
@@ -6,6 +6,7 @@
     <body>
 <ul>
   <li><a href="index.html">over mij</a></li>
+  <li><a href="algemene informatie.html">algemene informatie</a></li>
   <li><a href="pagina2.html"> kleurmodellen</a></li>
   <li><a href="pagina3.html"> binair stelsel</a></li>
   <li><a href="pagina.html"> compressie</a></il>
