--- a/algemene informatie.html
+++ b/algemene informatie.html
@@ -12,6 +12,8 @@
   <li><a href="pagina.html"> compressie</a></il>
   <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
-halloooooo
+<p class="vraag1">
+  ? wat maakt een computer nou een computer ?
+</p>
 </body>
 </html>
