--- a/algemene informatie.html
+++ b/algemene informatie.html
@@ -13,7 +13,7 @@
   <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
 <p class="vraag1">
-  ? wat maakt een computer nou een computer ?
+  ? Wat maakt een computer nou een computer ?
 </p>
 </body>
 </html>
