--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
           </ul>
         <p class="titel">BOAZ</p> 
-        <p class="tekst1">Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege on H4C.
-            mijn hobby's zijn vooral gamen en tiktok kijken. Als ik game speel ik eigenlijk allen GTA met vrienden.
+        <p class="tekst1">
+            Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege on H4C.
+            Mijn hobby's zijn vooral gamen en tiktok kijken. Als ik game speel ik eigenlijk allen GTA met vrienden.
         </p>
         <img class="plaatje" src="bos.webp" style="width:450px;height:225px;">
     </body>
