--- a/pagina3.html
+++ b/pagina3.html
@@ -12,6 +12,12 @@
   <li><a href="pagina.html"> compressie</a></il>
   <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
-hallo
+  <img src="lijstje.png">
+<p>
+  Het binair stelsel is de taal die computers gebruiken.
+  In plaats van de het 10 tallig stelsel wat wij kennen gebruiken ze hier het 2 tallig stelsel met de 1 en 0.
+  Je kan hiermee getallen en letters uitleggen dit doe je door speciale combinaties van 1en en 0en.
+
+</p>
 </body>
 </html>
