--- a/pagina3.html
+++ b/pagina3.html
@@ -12,7 +12,7 @@
   <li><a href="pagina.html"> compressie</a></il>
   <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
-  <img src="lijstje.png">
+  <img class="binair" src="lijstje.png">
 <p>
   Het binair stelsel is de taal die computers gebruiken.
   In plaats van de het 10 tallig stelsel wat wij kennen gebruiken ze hier het 2 tallig stelsel met de 1 en 0.
