--- a/pagina3.html
+++ b/pagina3.html
@@ -17,7 +17,9 @@
   Het binair stelsel is de taal die computers gebruiken.
   In plaats van de het 10 tallig stelsel wat wij kennen gebruiken ze hier het 2 tallig stelsel met de 1 en 0.
   Je kan hiermee getallen en letters uitleggen dit doe je door speciale combinaties van 1en en 0en.
-
+  Mijn manier van aflezen is als het eerste getal veranderd is het -1 of +1. 
+  0=0   1=1   10=2   11=3  100=4   101=5
+hieronder staat nog een plaatje voor verduidelijking
 </p>
 </body>
 </html>
