--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="pagina.html"> compressie</a></il>
             <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
           </ul>
-        <p class="titel">BOAZ</p> 
+        <p class="titel">BOAZ</p> <-- dit zorgt dat de titel van de pagina verander -->
         <p class="tekst1">
             Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege on H4C.
             Mijn hobby's zijn vooral gamen en tiktok kijken. 
