--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="pagina2.html"> kleurmodellen</a></li>
             <li><a href="pagina3.html"> binair stelsel</a></li>
             <li><a href="pagina.html"> compressie</a></il>
-            <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
+            <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li> <-- al deze regels zorgen voor en link naar andere pagina's-->
           </ul>
         <p class="titel">BOAZ</p> <-- dit zorgt dat de titel van de pagina verander -->
         <p class="tekst1">
