--- a/pagina3.html
+++ b/pagina3.html
@@ -12,14 +12,15 @@
   <li><a href="pagina.html"> compressie</a></il>
   <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
-  <img class="binair" src="lijstje.png">
+  <img class="binair" src="ASCII-code-tabel.png">
 <p>
   Het binair stelsel is de taal die computers gebruiken.
   In plaats van de het 10 tallig stelsel wat wij kennen gebruiken ze hier het 2 tallig stelsel met de 1 en 0.
   Je kan hiermee getallen en letters uitleggen dit doe je door speciale combinaties van 1en en 0en.
   Mijn manier van aflezen is als het eerste getal veranderd is het -1 of +1. 
   0=0   1=1   10=2   11=3  100=4   101=5
-hieronder staat nog een plaatje voor verduidelijking
+  Je hebt ook nog het ASCII stelsel, dit gebruik je om letters en tekens aan te geven.
+hieronder staan plaatjes voor verduidelijking
 </p>
 </body>
 </html>
