--- a/binair stelsel.html
+++ b/binair stelsel.html
@@ -5,12 +5,11 @@
     </head>
     <body>
 <ul>
-  <li><a href="index.html">over mij</a></li>
+  <li><a href="over mij.html">over mij</a></li>
   <li><a href="algemene informatie.html">algemene informatie</a></li>
-  <li><a href="pagina2.html"> kleurmodellen</a></li>
-  <li><a href="pagina3.html"> binair stelsel</a></li>
-  <li><a href="pagina.html"> compressie</a></il>
-  <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li>
+  <li><a href="kleurmodellen.html"> kleurmodellen</a></li>
+  <li><a href="compressie.html"> compressie</a></il>
+  <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
   <img class="binair" src="ASCII-code-tabel.png" style="width:600px;height:400px;">
 <p>
