--- a/compressie.html
+++ b/compressie.html
@@ -6,16 +6,11 @@
     <body>
 <ul>
   <li><a href="over mij.html">over mij</a></li>
+  <li><a href="algemene informatie.html">algemene informatie</a></li>
   <li><a href="kleurmodellen.html"> kleurmodellen</a></li>
   <li><a href="binair stelsel.html"> binair stelsel</a></li>
-  <li><a href="compressie.html"> compressie</a></il>
   <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
-<p class="vraag1">
-  ? Wat maakt een computer nou een computer ?
-</p>
-<p>
-
-</p>
+halloooooo
 </body>
 </html>
