--- a/over mij.html
+++ b/over mij.html
@@ -8,12 +8,11 @@
             BOAZ
         </title>
         <ul>
-            <li><a href="index.html">over mij</a></li>
-            <li><a href="algemene informatie.html">algemene informatie</a></li>
-            <li><a href="pagina2.html"> kleurmodellen</a></li>
-            <li><a href="pagina3.html"> binair stelsel</a></li>
-            <li><a href="pagina.html"> compressie</a></il>
-            <li><a href="pagina5.html">Bitmap- en vectorafbeeldingen</a></li> <-- al deze regels zorgen voor en link naar andere pagina's-->
+  <li><a href="algemene informatie.html">algemene informatie</a></li>
+  <li><a href="kleurmodellen.html"> kleurmodellen</a></li>
+  <li><a href="binair stelsel.html"> binair stelsel</a></li>
+  <li><a href="compressie.html"> compressie</a></il>
+  <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li> <-- al deze regels zorgen voor en link naar andere pagina's-->
           </ul>
         <p class="titel">BOAZ</p> <-- dit zorgt dat de titel van de pagina verander -->
         <p class="tekst1">
