--- a/binair stelsel.html
+++ b/binair stelsel.html
@@ -5,7 +5,7 @@
     </head>
     <body>
 <ul>
-  <li><a href="over mij.html">over mij</a></li>
+  <li><a href="index.html">over mij</a></li>
   <li><a href="algemene informatie.html">algemene informatie</a></li>
   <li><a href="kleurmodellen.html"> kleurmodellen</a></li>
   <li><a href="compressie.html"> compressie</a></il>
