--- a/algemene informatie.html
+++ b/algemene informatie.html
@@ -5,7 +5,7 @@
     </head>
     <body>
 <ul>
-  <li><a href="over mij.html">over mij</a></li>
+  <li><a href="index.html">over mij</a></li>
   <li><a href="kleurmodellen.html"> kleurmodellen</a></li>
   <li><a href="binair stelsel.html"> binair stelsel</a></li>
   <li><a href="compressie.html"> compressie</a></il>
