--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="opmaak.css">
         <body>
             <ul>
-                <li><a href="over mij.html">over mij</a></li>
+                <li><a href="index.html">over mij</a></li>
                 <li><a href="algemene informatie.html">algemene informatie</a></li>
                 <li><a href="binair stelsel.html"> binair stelsel</a></li>
                 <li><a href="compressie.html"> compressie</a></il>
