--- a/algemene informatie.html
+++ b/algemene informatie.html
@@ -15,7 +15,17 @@
   ? Wat maakt een computer nou een computer ?
 </p>
 <p>
+  Invoer (Input): Dit zijn de gegevens die door een gebruiker in een computer worden ingevoerd. Een voorbeeld hiervan is, is bijvoorbeeld een tekst die word getypt.
 
+  Uitvoer (Output): Dit is de informatie die een computer maakt en beschikbaar is voor een gebruiker. een voorbeeld hiervan is, is het beeld wat je krijgt.
+  
+  Verwerking (Processing): Dit is het proces dat van de ingevoerde gegevens bruikbare informatie wordt gemaakt.
+  
+  Informatie:Informatie is het resultaat van de verwerking van gegevens in de computer
+  
+  Gegevens (Data): Dit zijn de letters en cijfers die zonder verweking bijna geen betkenis hebben.
+  
+  In een computersysteem werkt dit allemaal samen zodat je computer werkt en doet wat jij vraagt.
 </p>
 </body>
 </html>
