--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <title>
             BOAZ
-        </title>
+        </title>  >-- dit zorgt dat de titel van de pagina verander -->
         <ul>
   <li><a href="algemene informatie.html">algemene informatie</a></li>
   <li><a href="kleurmodellen.html"> kleurmodellen</a></li>
@@ -14,7 +14,7 @@
   <li><a href="compressie.html"> compressie</a></il>
   <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li> <-- al deze regels zorgen voor en link naar andere pagina's-->
           </ul>
-        <p class="titel">BOAZ</p> <-- dit zorgt dat de titel van de pagina verander -->
+        <p class="titel">BOAZ</p>
         <p class="tekst1">
             Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege on H4C.
             Mijn hobby's zijn vooral gamen en tiktok kijken. 
