--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="opmaak.css">
+        <link rel="stylesheet" href="opmaak.css"><!--dit maakt een link naar de css code-->
     </head>
     <body>
         <title>
             BOAZ
-        </title>  >-- dit zorgt dat de titel van de pagina verander -->
+        </title>  <!-- dit zorgt dat de titel van de pagina verander -->
         <ul>
   <li><a href="algemene informatie.html">algemene informatie</a></li>
   <li><a href="kleurmodellen.html"> kleurmodellen</a></li>
   <li><a href="binair stelsel.html"> binair stelsel</a></li>
   <li><a href="compressie.html"> compressie</a></il>
-  <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li> <-- al deze regels zorgen voor en link naar andere pagina's-->
+  <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li> <!-- al deze regels zorgen voor en link naar andere pagina's-->
           </ul>
-        <p class="titel">BOAZ</p>
+        <p class="titel">BOAZ</p><!--class zorgt voor dat de css code weet over wat het gaat-->
         <p class="tekst1">
             Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege on H4C.
             Mijn hobby's zijn vooral gamen en tiktok kijken. 
