--- a/binair stelsel.html
+++ b/binair stelsel.html
@@ -16,10 +16,11 @@
   Het binair stelsel is de taal die computers gebruiken.
   In plaats van de het 10 tallig stelsel wat wij kennen gebruiken ze hier het 2 tallig stelsel met de 1 en 0.
   Je kan hiermee getallen en letters uitleggen dit doe je door speciale combinaties van 1en en 0en.
+  Zo'n 1 of 0 heet een bit 8 van deze getallen achter elkaar hete bytes.
   Mijn manier van aflezen is als het eerste getal veranderd is het -1 of +1. 
   0=0   1=1   10=2   11=3  100=4   101=5
   Je hebt ook nog het ASCII stelsel, dit gebruik je om letters en tekens aan te geven.
-hieronder staan plaatjes voor verduidelijking
+Hieronder staan plaatjes voor verduidelijking.
 </p>
 </body>
 </html>
