--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -10,7 +10,13 @@
                 <li><a href="compressie.html"> compressie</a></il>
                 <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li>
               </ul>
-        hallo mensjes
+              <p>1. Kleuren Modellen: RGB en CMYK</p>
+              <p>Kleuren Modellen zijn methoden om kleuren te laten zien. De meest gebruikte modellen zijn RGB en CMYK.
+            </p>
+            <p>RGB-kleurenmodel</p>
+            <p>Dit staat voor: rood, groen, blauw. Het wordt voornamelijk gebruikt voor schermen, zoals bij computers, tv's en smartphones. Het werkt door die kleuren te combineren om andere kleuren te maken. Elke kleur heeft een intensiteit tussen 0 en 255. Wanneer de drie kleuren op maximale intensiteit worden ingesteld, krijg je wit; als ze op nul staan, krijg je zwart.</p>
+            <p>CMYK-kleurmodel</p>
+            <p>Dit staat voor: Cyaan, Magenta, Geel (Yellow) en Zwart (Key). Dit wordt gebruikt bij het afdrukken van afbeeldingen op papier. In plaats van het combineren van licht, werkt CMYK met inkt. De verschillende inktkleuren worden op papier gedrukt om kleuren te maken.</p>
         </body>
     </head>
 </html>
