--- a/algemene informatie.html
+++ b/algemene informatie.html
@@ -14,13 +14,13 @@
 <p class="vraag1">
   ? Wat maakt een computer nou een computer ?
 </p>
-<p class="info1">
-Invoer (Input): Dit zijn de gegevens die door een gebruiker in een computer worden ingevoerd. Een voorbeeld hiervan is, is bijvoorbeeld een tekst die word getypt.
-Uitvoer (Output): Dit is de informatie die een computer maakt en beschikbaar is voor een gebruiker. een voorbeeld hiervan is, is het beeld wat je krijgt.  
-Verwerking (Processing): Dit is het proces dat van de ingevoerde gegevens bruikbare informatie wordt gemaakt.
-Informatie:Informatie is het resultaat van de verwerking van gegevens in de computer
-Gegevens (Data): Dit zijn de letters en cijfers die zonder verweking bijna geen betkenis hebben.
-In een computersysteem werkt dit allemaal samen zodat je computer werkt en doet wat jij vraagt.
-</p>
+<div class="info1">
+<p>Invoer (Input): Dit zijn de gegevens die door een gebruiker in een computer worden ingevoerd. Een voorbeeld hiervan is, is bijvoorbeeld een tekst die word getypt.</p>
+<p>Uitvoer (Output): Dit is de informatie die een computer maakt en beschikbaar is voor een gebruiker. een voorbeeld hiervan is, is het beeld wat je krijgt.</p>  
+<p>Verwerking (Processing): Dit is het proces dat van de ingevoerde gegevens bruikbare informatie wordt gemaakt.</p>
+<p>Informatie:Informatie is het resultaat van de verwerking van gegevens in de computer.</p>
+<p>Gegevens (Data): Dit zijn de letters en cijfers die zonder verweking bijna geen betkenis hebben.</p>
+<p>In een computersysteem werkt dit allemaal samen zodat je computer werkt en doet wat jij vraagt.</p>
+</div>
 </body>
 </html>
