--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -17,6 +17,10 @@
             <p>Dit staat voor: rood, groen, blauw. Het wordt voornamelijk gebruikt voor schermen, zoals bij computers, tv's en smartphones. Het werkt door die kleuren te combineren om andere kleuren te maken. Elke kleur heeft een intensiteit tussen 0 en 255. Wanneer de drie kleuren op maximale intensiteit worden ingesteld, krijg je wit; als ze op nul staan, krijg je zwart.</p>
             <p>CMYK-kleurmodel</p>
             <p>Dit staat voor: Cyaan, Magenta, Geel (Yellow) en Zwart (Key). Dit wordt gebruikt bij het afdrukken van afbeeldingen op papier. In plaats van het combineren van licht, werkt CMYK met inkt. De verschillende inktkleuren worden op papier gedrukt om kleuren te maken.</p>
+            <p>2. Pixels</p>
+            <p>Een pixel is het kleinste stukje van een digitale afbeelding. Het is 1 klein punt op het scherm dat een specifieke kleur kan aangeven. het werkt met drie kleuren (RGB-model) die met verschillende intensiteiten verschillende kleuren worden</p>
+            <p>3. Resolutie</p>
+            <p>Resolutie is hoeveel pixels een beeld bevat uitgedrukt in breedte x hoogte in pixels. Hoe hoger de resolutie is, hoe meer pixels op het beeld, hoe scherper de afbeelding wordt. Bij een lage resolutie zijn de beelden blokkerig en onscherp.</p>
         </body>
     </head>
 </html>
