--- a/binair stelsel.html
+++ b/binair stelsel.html
@@ -11,7 +11,8 @@
   <li><a href="compressie.html"> compressie</a></il>
   <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
-  <img class="binair" src="binair.jpeg" style="width:50px;height:78px;">
+  <img class="binair" src="binair.jpeg" style="width:100px;height:150px;">
+  <div>
 <p>
   Het binair stelsel is de taal die computers gebruiken.
   In plaats van de het 10 tallig stelsel wat wij kennen gebruiken ze hier het 2 tallig stelsel met de 1 en 0.
@@ -24,5 +25,6 @@
   Je hebt ook nog het ASCII stelsel, dit gebruik je om letters en tekens aan te geven.
 Hieronder staan plaatjes voor verduidelijking.
 </p>
+</div>
 </body>
 </html>
