--- a/binair stelsel.html
+++ b/binair stelsel.html
@@ -12,6 +12,7 @@
   <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
   <img class="binair" src="binair.jpeg" style="width:200px;height:300px;">
+  <img src="ASCII-code-tabel.png" style="width:50px;height:300px;">
   <div>
 <p>
   Het binair stelsel is de taal die computers gebruiken.
@@ -23,7 +24,6 @@
  <p> 0=0   1=1   10=2   11=3  100=4   101=5 </p>
  <p>
   Je hebt ook nog het ASCII stelsel, dit gebruik je om letters en tekens aan te geven.
-Hieronder staan plaatjes voor verduidelijking.
 </p>
 </div>
 </body>
