--- a/binair stelsel.html
+++ b/binair stelsel.html
@@ -12,7 +12,7 @@
   <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
   <img class="binair" src="binair.jpeg" style="width:200px;height:300px;">
-  <img src="ASCII-code-tabel.png" style="width:50px;height:300px;">
+  <img class="ASCII" src="ASCII-code-tabel.png" style="width:100px;height:300px;">
   <div>
 <p>
   Het binair stelsel is de taal die computers gebruiken.
