--- a/compressie.html
+++ b/compressie.html
@@ -11,6 +11,8 @@
   <li><a href="binair stelsel.html"> binair stelsel</a></li>
   <li><a href="bitmap- en vectorafbeeldingen.html">Bitmap- en vectorafbeeldingen</a></li>
   </ul>
-halloooooo
+<p>1. Lossless Compressie</p>
+<p>Hierbij worden gegevens veranderd zonder verlies van informatie, als je het terugzet kan je het origineel bekijken. Het werkt door de gegevens terug te halen en opnieuw te coderen op de beste manier.Het wordt vooral gebruikt voor teksten en afbeeldingen waarbij het vaak wordt veranderd.</p>
+
 </body>
 </html>
