--- a/compressie.html
+++ b/compressie.html
@@ -13,6 +13,16 @@
   </ul>
 <p>1. Lossless Compressie</p>
 <p>Hierbij worden gegevens veranderd zonder verlies van informatie, als je het terugzet kan je het origineel bekijken. Het werkt door de gegevens terug te halen en opnieuw te coderen op de beste manier.Het wordt vooral gebruikt voor teksten en afbeeldingen waarbij het vaak wordt veranderd.</p>
-
+<p>2. Lossy Compressie</p>
+<p>Hierbij wordt de oude informatie om de bestandsgrootte te verkleinen. Niet alle originele gegevens kun je terugkrijgen, omdat de minder belangrijke details worden weggegooid. Deze methode werkt door te analyseren wat de minst belangrijke informatie is en gooit dit weg. Het wordt vaak gebruikt voor muziek en video’s. Het voordeel ervan is dat de bestanden veel kleiner zijn.</p>
+<p>Voorbeelden van compressie</p>
+<p>Beeldcompressie:</p>
+<p>Lossless: PNG gebruikt lossless compressie, waarbij de afbeelding geen details verliest, maar de bestandsgrootte minder wordt verkleind dan bij lossy compressie.</p>
+<p>Lossy: JPEG maakt gebruik van lossy compressie en kan veel gegevens verwijderen zonder dat het meteen zichtbaar is. Dit resulteert in veel kleinere bestanden, maar bij te veel compressie kan de afbeelding wazig of blokkerig worden.</p>
+<p>Video compressie:</p>
+<p>Lossy: Videoformaten zoals MP4 gebruikt lossy compressie om grote videobestanden te verkleinen. Hierdoor worden video's kleiner in bestandsgrootte, maar de kwaliteit kan slechter worden.</p>
+<p>Audiocompressie</p>
+<p>Lossless: FLAC is een lossless audioformaat die hoge kwaliteit heeft, maar de bestandsgroottes zijn groot.</p>
+<p>Lossy: MP3 is een lossy audioformaat dat veel wordt gebruikt  omdat het een kleine bestandsgrootte heeft, er is hier wel veel kwaliteitsverlies</p>
 </body>
 </html>
