--- a/bitmap- en vectorafbeeldingen.html
+++ b/bitmap- en vectorafbeeldingen.html
@@ -11,6 +11,14 @@
   <li><a href="binair stelsel.html"> binair stelsel</a></li>
   <li><a href="compressie.html"> compressie</a></il>
   </ul>
-halloooooo
+<p>Bitmap- en vectorafbeeldingen zijn de manieren waarop beelden en geluiden worden opgeslagen.</p>
+<p>1. Bitmapafbeeldingen (Rasterafbeeldingen)</p>
+<p>Een bitmap is een soort afbeelding dat bestaat uit individuele pixels. Elke pixel heeft een bepaalde kleurwaarde. Bitmapafbeeldingen worden direct opgeslagen op pixel niveau. Dit betekent dat ze bij inzoomen korrelig kunnen worden. Elke pixel in een bitmap wordt gemaakt door het RGB-model, elke pixel is een combinatie hiervan. Dit wordt gebruikt bij lossy compressie en lossless compressie.</p>
+<p>2. Vectorafbeeldingen</p>
+<p>Een vectorafbeelding is gemaakt met wiskundige formules in plaats van pixels. Het maakt gebruik van lijnen en vormen die worden samengevoegd door middel van punten (vectoren). Omdat het niet wordt gemaakt door pixels heeft het geen last van resolutie. In plaats van de kleur van pixels worden vectorafbeeldingen gemaakt door lijnen en vormen met behulp van formules.</p>
+<p>3. Opslag van Beeld</p>
+<p>elke pixel in een bitmapafbeelding wordt opgeslagen, hierbij is de resolutie bepalend voor de bestandsgrootte. Als er compressie wordt gebruikt wordt de bestandsgrootte verkleind door middel van lossy compressie, of nog beter met lossless compressie</p>
+<p>In vectorafbeeldingen worden lijnen en vormen opgeslagen als een soort instructies, hierdoor passen ze goed in de opslagruimte. Omdat er geen pixels worden gebruikt, hangt de bestandsgrootte af van de afbeelding en niet van de resolutie.  </p>
+
 </body>
 </html>
