--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </ul>
         <p class="titel">BOAZ</p><!--class zorgt voor dat de css code weet over wat het gaat-->
         <p class="tekst1">
-            Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege on H4C.
+            Hallo mijn naam is boaz en ik ben 15 jaar oud. Ik zit op het vlietlandcollege in H4C.
             Mijn hobby's zijn vooral gamen en tiktok kijken. 
             Als ik game speel ik eigenlijk alleen GTA met vrienden.
         </p>
