--- a/compressie.html
+++ b/compressie.html
@@ -23,6 +23,6 @@
 <p>Lossy: Videoformaten zoals MP4 gebruikt lossy compressie om grote videobestanden te verkleinen. Hierdoor worden video's kleiner in bestandsgrootte, maar de kwaliteit kan slechter worden.</p>
 <p>Audiocompressie</p>
 <p>Lossless: FLAC is een lossless audioformaat die hoge kwaliteit heeft, maar de bestandsgroottes zijn groot.</p>
-<p>Lossy: MP3 is een lossy audioformaat dat veel wordt gebruikt  omdat het een kleine bestandsgrootte heeft, er is hier wel veel kwaliteitsverlies</p>
+<p>Lossy: MP3 is een lossy audioformaat dat veel wordt gebruikt  omdat het een kleine bestandsgrootte heeft, er is hier wel veel kwaliteitsverlies.</p>
 </body>
 </html>
