--- a/binair stelsel.html
+++ b/binair stelsel.html
@@ -25,6 +25,7 @@
  <p>
   Je hebt ook nog het ASCII stelsel, dit gebruik je om letters en tekens aan te geven.
 </p>
+<iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe>
 </div>
 </body>
 </html>
