--- a/bitmap- en vectorafbeeldingen.html
+++ b/bitmap- en vectorafbeeldingen.html
@@ -19,6 +19,14 @@
 <p>3. Opslag van Beeld</p>
 <p>elke pixel in een bitmapafbeelding wordt opgeslagen, hierbij is de resolutie bepalend voor de bestandsgrootte. Als er compressie wordt gebruikt wordt de bestandsgrootte verkleind door middel van lossy compressie, of nog beter met lossless compressie</p>
 <p>In vectorafbeeldingen worden lijnen en vormen opgeslagen als een soort instructies, hierdoor passen ze goed in de opslagruimte. Omdat er geen pixels worden gebruikt, hangt de bestandsgrootte af van de afbeelding en niet van de resolutie.  </p>
+<p>4. Opslag van Geluid</p>
+<p>Geluid kan op verschillende manieren digitaal worden opgeslagen </p>
+<p>Ongecomprimeerde audio:</p>
+<p>In geluidsformaten die ongecomprimeerde audio gebruiken wordt het geluid opgeslagen als meerdere stukjes achter elkaar, de hoogte van geluidsgolven wordt op verschillende momenten weergegeven. De kwaliteit is hoog, maar de bestandsgroottes zijn ook groot.</p>
+<p>Lossless compressie:</p>
+<p>Lossless compressie formaten behouden alle originele gegevens zonder kwaliteitsverlies. Ze veranderen het geluid door de onnodige delen te verwijderen zonder geluidsgegevens te verwijderen.</p>
+<p>Lossy compressie:</p>
+<p>Formaten die lossy compressie gebruiken om de bestandsgrootte te verkleinen doen dit door middel van dingen die je niet hoort te verwijderen. Hier komen kleine bestandsgroottes uit, maar er gaat wel geluidskwaliteit weg.</p>
 
 </body>
 </html>
