--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
             Als ik game speel ik eigenlijk alleen GTA met vrienden.
         </p>
         <img class="plaatje" src="bos.webp" style="width:450px;height:225px;">
+        <footer>
+            <p>boaz tuijn</p>
+          </footer>
     </body>
 </html>
