--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
         <img class="plaatje" src="bos.webp" style="width:450px;height:225px;">
         <footer>
-            <p>boaz tuijn</p>
+            <p class="footer">boaz tuijn</p>
           </footer>
     </body>
 </html>
