--- a/algemene informatie.html
+++ b/algemene informatie.html
@@ -22,7 +22,7 @@
 <p>Gegevens (Data): Dit zijn de letters en cijfers die zonder verweking bijna geen betkenis hebben.</p>
 <p>In een computersysteem werkt dit allemaal samen zodat je computer werkt en doet wat jij vraagt.</p>
 </div>
-<img src="images.png">
+<img class="input" src="images.png">
 <footer>
   <p class="footer">boaz tuijn</p>
 </footer>
