--- a/binair stelsel.html
+++ b/binair stelsel.html
@@ -27,5 +27,8 @@
 </p>
 <iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe>
 </div>
+<footer>
+  <p class="footer">boaz tuijn</p>
+</footer>
 </body>
 </html>
